# srl-tui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  models.rs  storage.rs
src/ui/: app.rs  mod.rs  theme.rs  widgets.rs
