[package]
name = "flashcards"
version = "0.4.1"
edition = "2021"
description = "Anki-style spaced repetition flashcard TUI"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.0", features = ["v4"] }

# File paths
dirs = "5.0"

# Error handling
anyhow = "1.0"

# CLI arguments
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "fl"
path = "src/main.rs"
