[package]
name = "flashcards"
version = "0.7.1"
edition = "2021"
description = "Anki-style spaced repetition flashcard TUI"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.0", features = ["v4"] }

# File paths
dirs = "5.0"

# Error handling
anyhow = "1.0"

# Unicode display width
unicode-width = "0.1"

# CLI arguments
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "srl"
path = "src/main.rs"
