[package]
name = "srl-tui"
version = "0.8.4"
edition = "2021"
description = "Spaced repetition flashcard TUI"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.0", features = ["v4"] }

# File paths
dirs = "5.0"

# Error handling
anyhow = "1.0"

# Anki import support
zip = "2.2"
rusqlite = { version = "0.32", features = ["bundled"] }

# Unicode display width
unicode-width = "0.1"

# Text wrapping
textwrap = "0.16"

# CLI arguments
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "srl"
path = "src/main.rs"
